--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,20 @@
 {
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/" }
-    ],
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
+    }
+  ],
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ],
   "routes": [
     {
       "src": "/api/(.*)",
       "dest": "api.js"
     }
   ]
-  }
+}
