--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,14 @@
 {
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
+  "functions": {
+    "api/json-server.js": {
+      "runtime": "nodejs14.x"
     }
-  ],
+  },
+
   "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
+    { "source": "/(.*)", 
+    "destination": "/" 
+  }
   ],
   "routes": [
     {
