--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
     "api/json-server.js": {
-      "runtime": "vercel-nodejs@2.0.0"
+      "runtime": "@vercel/node@2.0.0"
     }
   },
   "routes": [
