--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,15 @@
 {
-  "functions": {
-    "api/json-server.js": {
-      "runtime": "@vercel/node@2.0.0"
+  "version": 2,
+  "builds": [
+    {
+      "src": "index.html",
+      "use": "@vercel/static"
     }
-  },
+  ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "api/json-server.js"
+      "dest": "/api/index.js"
     }
   ]
 }
