--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "json-server": "json-server --watch db.json --port 3001",
     "dev": "vite",
     "build": "vite build",
+    "serve": "vite preview",
+    "json-server": "json-server --watch db.json --port 3001",
     "lint": "eslint .",
     "preview": "vite preview"
   },
